식물 수정 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         </activity>
         <activity android:name=".ListActivity" />
         <activity android:name=".InsertActivity" />
+        <activity android:name=".ModifyActivity"/>
     </application>
 
 </manifest>
