--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,8 @@
         <activity android:name=".ListActivity" />
         <activity android:name=".InsertActivity" />
         <activity android:name=".ViewActivity" />
-        <activity android:name=".alarm.BootWaterAlarm" tools:ignore="Instantiatable" />
-        <receiver android:name=".alarm.BootReceiver" android:enabled="true">
+        <activity android:name=".alarm.BootWaterAlarmService" tools:ignore="Instantiatable" />
+        <receiver android:name=".alarm.BootReceiver" android:enabled="true" android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
