설정 기능 추가
1. 오픈소스 라이선스 작업중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".OpenSourceLicenseActivity"></activity>
+        <activity android:name=".OpenSourceListActivity" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
